--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "prerelease": true
       },
       {
-        "name": "toaster-restrict-width",
+        "name": "toaster-width",
         "prerelease": true
       }
     ]
