--- a/package.json
+++ b/package.json
@@ -18,17 +18,14 @@
     "branches": [
       "main",
       {
-        "name": "remove-unused-components",
-        "prerelease": true
-      },
-      {
-        "name": "refactor-simpler-build",
-        "prerelease": true
-      },
-      {
-        "name": "dark-mode-selector-css",
-        "prerelease": true
+        "name": ".*",
+        "prerelease": "${name}"
       }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/github"
     ]
   },
   "publishConfig": {
@@ -65,6 +62,7 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-links": "^9.1.10",
     "@storybook/addon-onboarding": "^9.1.10",
     "@storybook/react-vite": "^9.1.10",
@@ -83,10 +81,10 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "semantic-release": "^25.0.1",
     "sonner": "^2.0.1",
     "storybook": "^9.1.10",
-    "tailwindcss-animate": "^1.0.7",
-    "@storybook/addon-docs": "^9.1.10"
+    "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
