--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "branches": [
       "main",
       {
-        "name": ".*",
+        "name": "*",
         "prerelease": "${name}"
       }
     ],
