--- a/package.json
+++ b/package.json
@@ -16,11 +16,7 @@
   },
   "release": {
     "branches": [
-      "main",
-      {
-        "name": "NRP-2403-dialog-enhancements",
-        "prerelease": true
-      }
+      "main"
     ]
   },
   "publishConfig": {
